fix(svn): 解决SVN信息获取中的空值和错误处理问题
- 添加了对svn info命令无输出情况的处理，避免后续解析出错
- 增强了错误处理逻辑，在命令执行失败时输出调试信息并返回默认值
- 修复了分支标签识别逻辑，增加未知分支和标签的兜底处理
- 添加了从工作副本根路径推断分支名称的备用方案
- 统一了字段名大小写处理，支持多种格式的属性名匹配
- 修复了URL提取时可能存在的空白字符问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "unplugin-info",
-  "version": "1.3.0",
+  "name": "longmo-unplugin-info",
+  "version": "1.0.2",
   "description": "Export build information as virutal module",
   "keywords": [
     "debug",
